  - Added ImGuiColorEditFlags_NoColorMarkers to disable them.
  - Added style.ColorMarkerSize to configure width of color component markers.
- Sliders, Drags:
  - Added ImGuiSliderFlags_ColorMarkers to opt-in adding R/G/B/A color markers
    next to each components, in multi-components functions.
  - Added a way to select a specific marker color.
- Text, InputText:
  - Reworked word-wrapping logic:
    - Try to not wrap in the middle of contiguous punctuations. (#8139, #8439, #9094)
    - Try to not wrap between a punctuation and a digit. (#8503)
    - Inside InputTextMultiline() with _WordWrap: prefer keeping blanks at the
      end of a line rather than at the beginning of next line. (#8990, #3237)
  - Fixed low-level word-wrapping function reading from *text_end when passed
    a string range. (#9107) [@achabense]
- Nav:
  - Fixed remote/shortcut InputText() not teleporting mouse cursor when
    nav cursor is visible and `io.ConfigNavMoveSetMousePos` is enabled.
- Scrollbar: fixed a codepath leading to a divide-by-zero (which would not be
  noticeable by user but detected by sanitizers). (#9089) [@judicaelclair]
- InvisibleButton: allow calling with size (0,0) to fit to available content 
  size. (#9166, #7623)
- Added GetItemFlags() in public API for consistency and to expose generic
  flags of last submitted item. (#9127)
- Images:
  - Added style.ImageRounding, ImGuiStyleVar_ImageRounding to configure
    rounding of Image() widgets. (#2942, #845)
  - ImageButton() doesn't use a clamped style.FrameRounding value but instead
    adjust inner image rounding when FramePadding > FrameRounding. (#2942, #845)
- Shortcuts:
  - IsItemHovered() without ImGuiHoveredFlags_AllowWhenBlockedByActiveItem
    doesn't filter out the signal when activated item is a shortcut remote activation;
    (which mimicks what's done internally in the ItemHoverable() function). (#9138)
  - Fixed tooltip placement being affected for a frame when located over an item